--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -504,8 +504,22 @@ video {
 .relative {
   position: relative;
 }
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+.my-\[50px\] {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 .mb-\[100px\] {
   margin-bottom: 100px;
+}
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+.mt-\[50px\] {
+  margin-top: 50px;
 }
 .flex {
   display: flex;
@@ -516,6 +530,9 @@ video {
 .min-h-\[120vh\] {
   min-height: 120vh;
 }
+.w-11\/12 {
+  width: 91.666667%;
+}
 .w-full {
   width: 100%;
 }
@@ -525,22 +542,45 @@ video {
 .flex-col {
   flex-direction: column;
 }
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+.rounded-md {
+  border-radius: 0.375rem;
 }
-.pb-\[5\.5rem\] {
-  padding-bottom: 5.5rem;
+.bg-\[\#f2e798\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 231 152 / var(--tw-bg-opacity));
+}
+.p-10 {
+  padding: 2.5rem;
+}
+.pb-\[6\.5rem\] {
+  padding-bottom: 6.5rem;
 }
 .text-center {
   text-align: center;
 }
+.font-\[ChapleauBold\] {
+  font-family: ChapleauBold;
+}
 .font-\[Chapleau\] {
   font-family: Chapleau;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+.font-\[Market_Deco\] {
+  font-weight: Market Deco;
+}
+.font-bold {
+  font-weight: 700;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -565,4 +605,74 @@ video {
 @font-face {
     font-family: "Chapleau";
     src: url("../font/Chapleau.otf") format('opentype');
+}
+
+@font-face {
+    font-family: "Market Deco";
+    src: url("../font/Market_Deco.ttf") format('truetype');
+}
+
+.file\:font-\[Chapleau\]::file-selector-button {
+  font-family: Chapleau;
+}
+
+@media (min-width: 640px) {
+
+  .sm\:w-5\/12 {
+    width: 41.666667%;
+  }
+}
+
+.\[\&\>div\>input\]\:rounded-lg>div>input {
+  border-radius: 0.5rem;
+}
+
+.\[\&\>div\>input\]\:border-\[1px\]>div>input {
+  border-width: 1px;
+}
+
+.\[\&\>div\>input\]\:border-white>div>input {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.\[\&\>div\>input\]\:bg-\[rgba\(0\2c 0\2c 0\2c 0\)\]>div>input {
+  background-color: rgba(0,0,0,0);
+}
+
+.\[\&\>div\>input\]\:pl-3>div>input {
+  padding-left: 0.75rem;
+}
+
+.\[\&\>div\>input\]\:text-black>div>input {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(84 84 84 / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(84 84 84 / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>label\]\:text-black>div>label {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.\[\&\>div\]\:my-\[10px\]>div {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.\[\&\>div\]\:grid>div {
+  display: grid;
+}
+
+.\[\&\>div\]\:w-full>div {
+  width: 100%;
 }
