--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,19 @@
   <link rel ="stylesheet" href='stylesheets/style.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
 </head>
-<body class = "bg-black h-auto">
+<body class = "bg-[url('<%= BackgroundURL %>')] h-auto">
   <div 
   id="container"
   class = "w-full flex flex-col relative grow min-h-[120vh]">
       <div 
         id = "contentWrapper"
-        class = "pb-[5.5rem]">
+        class = "pb-[6.5rem]">
           <div class = "w-full mb-[100px]">
+            <%- include("partials/header") %>
+            <%- include("partials/MobileMenu") %>
           </div>
           <div class = "text-center">
-             <h1 class = "font-[Chapleau] text-3xl text-white">Henry's Speakeasy</h1>
+             <h1 class = "font-[Chapleau] text-3xl text-black">Henry's Speakeasy</h1>
           </div>
       </div>
       <%- include('partials/footer') %>
