--- a/views/partials/MobileMenu.ejs
+++ b/views/partials/MobileMenu.ejs
@@ -1,29 +1,8 @@
-<script>
-	const BurgerMenu = document.getElementById("BurgerMenu")
-	
-	var ActorMenu = document.getElementById('ActorMenu');
-	/*
-	const CloseActorMenu = evt =>{
-	ActorMenu = document.getElementById('ActorMenu');
-	ActorMenu.classList.remove('block')
-	ActorMenu.classList.add('hidden');
-	}*/
-
-</script>
-<div id = "MobileMenu" class = "w-[300px] bg-white h-full text-center text-black z-50 fixed 
-	right-0 top-0 font-bold closed-menu [&>div]:select-none">
+<div id = "MobileMenu" class = "w-[300px] bg-[url('<%= MobileMenuBackground%>')] h-full text-center text-black z-50 fixed 
+	right-0 top-0 font-bold closed-menu [&>div]:select-none bg-[length:100%_100%]">
 	<div 
 		class = "mt-10 cursor-pointer hover:underline hover:text-gray-500 active:text-lg" 
 		onclick="location.href='/'">Home</div>
-	<div 
-		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg" 
-		onclick="location.href='/catalog/genres'">Genres</div>
-	<div 
-		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg"
-		onclick="location.href='/catalog/directors'">Directors</div>
-	<div 
-		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg"
-		onclick="location.href='/catalog/actors'">Actors</div>
 	<div 
 		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg"
 		onclick="location.href='/contact'">Contact</div>
