--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,21 +10,23 @@
 <body class = "bg-[url('<%= BackgroundURL %>')] h-auto">
   <div 
   id="container"
-  class = "w-full flex flex-col relative grow min-h-[120vh] font-['Market_Deco']">
+  class = "w-full flex flex-col relative grow min-h-[120vh] font-['DecoTech']">
       <div 
         id = "contentWrapper"
         class = "pb-[6.5rem]">
-          <div class = "w-full mb-[100px]">
+          <div class = "w-full mb-[120px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
           </div>
           <div class = "text-center">
-             <h1 class = "font-['Market_Deco'] text-3xl text-black mt-[100px]"><%= title %></h1>
+             <h1 class = "font-['DecoTech'] text-5xl text-black mt-[100px] uppercase"><%= title %></h1>
              <div class = "w-11/12 mx-auto sm:w-5/12 ">
-              <% if(typeof error != 'undefined' && typeof error.errors != 'undefined') {%> 
-                  <div class = "my-[50px] text-black w-full">
+              <% if(typeof error != 'undefined' && typeof error.error != 'undefined') {%> 
+                  <div 
+                    id="ErrorDiv"
+                    class = "my-[50px] text-black w-full">
                     <h2 class = "font-bold">Error: </h2>
-                    <% error.errors.forEach(val => { %> 
+                    <% error.error.forEach(val => { %> 
                         <p class = "text-white"><%= val.msg %></p>
                     <% }) %>
                   </div>
@@ -36,9 +38,10 @@
                      class = "w-full h-auto" 
                      />
                   <form
-                    action="" 
+                    action="/register" 
                     method="POST"
-                    class="[&>div>label]:text-black [&>div]:grid [&>div>input]:rounded-lg 
+                    enctype="multipart/form-data"
+                    class="[&>div>label]:text-black [&>div>label]:uppercase [&>div>label]:font-bold [&>div]:grid [&>div>input]:rounded-lg 
                     [&>div]:w-full [&>div]:my-[10px] [&>div>input]:pl-3 [&>div>input]:bg-[rgba(0,0,0,0)] 
                     [&>div>input]:text-black [&>div>input]:border-white [&>div>input]:border-[1px]
                     bg-[#f2e798] rounded-md p-10 [&>div>input]:placeholder:text-[#545454] text-2xl
@@ -53,6 +56,7 @@
                             placeholder = "Type your username here" 
                             required = "true"
                             class = ""
+                            value = "<%= typeof username != 'undefined' ? username : null %>"
                             />
                     </div>
                     <div>
@@ -64,6 +68,7 @@
                             placeholder = "Type your email here" 
                             required = "true"
                             class = ""
+                            value = "<%= typeof email != 'undefined' ? email : null %>"
                             />
                     </div>
                     <div>
@@ -73,8 +78,9 @@
                             id = "profile_picInput"
                             type = "file"
                             placeholder = "Upload an image for your your profile picture here" 
-                            class = "file:rounded-lg file:font-['Market_Deco'] file:bg-[#99cbae]
+                            class = "file:rounded-lg file:font-['DecoTech'] file:bg-[#99cbae]
                             file:text-white cursor-pointer"
+                            value = "<%= typeof profile_pic != 'undefined' ? profile_pic : null %>"
                             />
                     </div>
                     <div>
@@ -82,10 +88,11 @@
                         <input 
                             name = "password" 
                             id = "passwordInput"
-                            type = "text"
+                            type = "password"
                             placeholder = "Type your password here" 
                             required = "true"
                             class = ""
+                            value = "<%= typeof password != 'undefined' ? password : null %>"
                             />
                     </div>
                     <div>
@@ -93,13 +100,14 @@
                         <input 
                             name = "confirm_password" 
                             id = "confirm_passwordInput"
-                            type = "text"
+                            type = "password"
                             placeholder = "Re-type your password here to confirm" 
                             required = "true"
                             class = ""
+                            value = "<%= typeof confirm_password != 'undefined' ? confirm_password : null %>"
                             />
                     </div>
-                    <%- include('partials/FormButtons') %>
+                    <%- include('partials/FormButtons')%>
                   </form>
                   <img 
                     src = "<%= BottomFrame %>" 
