--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -508,6 +508,10 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
 .my-\[50px\] {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -515,14 +519,20 @@ video {
 .mb-\[100px\] {
   margin-bottom: 100px;
 }
+.mb-\[120px\] {
+  margin-bottom: 120px;
+}
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
 .mt-\[100px\] {
   margin-top: 100px;
 }
-.mt-\[50px\] {
-  margin-top: 50px;
-}
 .flex {
   display: flex;
+}
+.h-\[100px\] {
+  height: 100px;
 }
 .h-auto {
   height: auto;
@@ -533,17 +543,30 @@ video {
 .w-11\/12 {
   width: 91.666667%;
 }
+.w-\[100px\] {
+  width: 100px;
+}
 .w-full {
   width: 100%;
 }
 .grow {
   flex-grow: 1;
 }
+.cursor-pointer {
+  cursor: pointer;
+}
 .flex-col {
   flex-direction: column;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .rounded-md {
   border-radius: 0.375rem;
+}
+.bg-\[\#555150\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(85 81 80 / var(--tw-bg-opacity));
 }
 .bg-\[\#f2e798\] {
   --tw-bg-opacity: 1;
@@ -558,8 +581,8 @@ video {
 .text-center {
   text-align: center;
 }
-.font-\[ChapleauBold\] {
-  font-family: ChapleauBold;
+.font-\[\'DecoTech\'\] {
+  font-family: 'DecoTech';
 }
 .font-\[Chapleau\] {
   font-family: Chapleau;
@@ -572,11 +595,19 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
-.font-\[Market_Deco\] {
-  font-weight: Market Deco;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .font-bold {
   font-weight: 700;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.text-\[\#f2e796\] {
+  --tw-text-opacity: 1;
+  color: rgb(242 231 150 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -608,19 +639,56 @@ video {
 }
 
 @font-face {
-    font-family: "Market Deco";
+    font-family: "MarketDeco";
     src: url("../font/Market_Deco.ttf") format('truetype');
 }
 
-.file\:font-\[Chapleau\]::file-selector-button {
-  font-family: Chapleau;
+@font-face {
+    font-family: "DecoTechTL";
+    src: url("../font/DecoTech_TL.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "DecoTech";
+    src: url("../font/DecoTech.ttf") format('truetype');
+}
+
+.file\:rounded-lg::file-selector-button {
+  border-radius: 0.5rem;
+}
+
+.file\:bg-\[\#99cbae\]::file-selector-button {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 203 174 / var(--tw-bg-opacity));
+}
+
+.file\:font-\[\'DecoTech\'\]::file-selector-button {
+  font-family: 'DecoTech';
+}
+
+.file\:text-white::file-selector-button {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
 
+  .sm\:mb-\[100px\] {
+    margin-bottom: 100px;
+  }
+
   .sm\:w-5\/12 {
     width: 41.666667%;
   }
+}
+
+.\[\&\>\*\]\:mx-5>* {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.\[\&\>\*\]\:inline-block>* {
+  display: inline-block;
 }
 
 .\[\&\>div\>input\]\:rounded-lg>div>input {
@@ -647,6 +715,16 @@ video {
 .\[\&\>div\>input\]\:text-black>div>input {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>input\]\:placeholder\:text-base>div>input::-moz-placeholder {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.\[\&\>div\>input\]\:placeholder\:text-base>div>input::placeholder {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::-moz-placeholder {
