--- a/views/partials/MobileMenu.ejs
+++ b/views/partials/MobileMenu.ejs
@@ -1,12 +1,13 @@
 <div id = "MobileMenu" class = "w-[300px] bg-[url('<%= MobileMenuBackground%>')] h-full text-center text-black z-50 fixed 
-	right-0 top-0 font-bold closed-menu [&>div]:select-none bg-[length:100%_100%]">
+	right-0 top-0 font-bold closed-menu [&>div]:select-none bg-[length:100%_100%] font=['MarketDeco']
+	text-2xl">
 	<div 
-		class = "mt-10 cursor-pointer hover:underline hover:text-gray-500 active:text-lg" 
+		class = "mt-10 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl" 
 		onclick="location.href='/'">Home</div>
 	<div 
-		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg"
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="location.href='/contact'">Contact</div>
 	<div 
-		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-lg"
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="CloseActorMenu">Close Menu</div>
 </div>
