Unknown auth strat local

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,17 +10,86 @@
 <body class = "bg-[url('<%= BackgroundURL %>')] h-auto">
   <div 
   id="container"
-  class = "w-full flex flex-col relative grow min-h-[120vh]">
+  class = "w-full flex flex-col relative grow min-h-[120vh] font-['DecoTech']">
       <div 
         id = "contentWrapper"
         class = "pb-[6.5rem]">
-          <div class = "w-full mb-[100px]">
+          <div class = "w-full mb-[120px]">
             <%- include("partials/header") %>
             <%- include("partials/MobileMenu") %>
           </div>
           <div class = "text-center">
-             <h1 class = "font-[Chapleau] text-3xl text-black">Henry's Speakeasy</h1>
-          </div>
+             <h1 class = "font-['DecoTech'] text-5xl text-black mt-[100px] uppercase"><%= title %></h1>
+             <div class = "w-11/12 mx-auto sm:w-5/12 ">
+              <% if(typeof error != 'undefined' && typeof error.errors != 'undefined') {%> 
+                  <div 
+                    id="ErrorDiv"
+                    class = "my-[50px] text-black w-full">
+                    <h2 class = "font-bold">Error: </h2>
+                    <% error.errors.forEach(val => { %> 
+                        <p class = "text-white"><%= val.msg %></p>
+                    <% }) %>
+                  </div>
+              <%}%>
+              <div>
+                  <img 
+                    src = "<%= UpperFrame %>" 
+                     alt = "upper-frame"
+                     class = "w-full h-auto" 
+                     />
+                  <form
+                    action="/login" 
+                    method="POST"
+                    enctype="multipart/form-data"
+                    class="[&>div>label]:text-black [&>div>label]:uppercase [&>div>label]:font-bold [&>div]:grid [&>div>input]:rounded-lg 
+                    [&>div]:w-full [&>div]:my-[10px] [&>div>input]:pl-3 [&>div>input]:bg-[rgba(0,0,0,0)] 
+                    [&>div>input]:text-black [&>div>input]:border-white [&>div>input]:border-[1px]
+                    bg-[#f2e798] rounded-md p-10 [&>div>input]:placeholder:text-[#545454] text-2xl
+                    [&>div>input]:placeholder:text-base" 
+                    id = "form">
+                    <div>
+                        <label for = "username">Username</label>
+                        <input 
+                            name = "username" 
+                            id = "nameInput"
+                            type = "text"
+                            placeholder = "Type your username here" 
+                            required = "true"
+                            class = ""
+                            value = "<%= typeof username != 'undefined' ? username : null %>"
+                            />
+                    </div>
+                    <div>
+                        <label for = "password">password</label>
+                        <input 
+                            name = "password" 
+                            id = "passwordInput"
+                            type = "password"
+                            placeholder = "Type your password here" 
+                            required = "true"
+                            class = ""
+                            value = "<%= typeof password != 'undefined' ? password : null %>"
+                            />
+                    </div>
+                    <%- include('partials/FormButtons')%>
+                    <hr class = "my-[25px] h-[2px] border-[2px]">
+                    <h2 class = "my-10 text-center text-lg">Don't have an account with us?</h2>
+                    <button 
+                        type = "button"
+                        onClick = "location.href='/register'"
+                        class = "rounded-full p-[10px] active:translate-x-[5px] active:translate-y-[5px] cursor-pointer
+                        border-white border-2 text-center w-[150px] select-none text-black mx-auto
+                        hover:bg-[#d48518] bg-[#e48f1a]"
+                    >Create Account</button>
+                  </form>
+                  <img 
+                    src = "<%= BottomFrame %>" 
+                    alt = "upper-frame"
+                    class = "w-full h-auto" 
+                     />
+              </div>
+            </div>
+		</div>
       </div>
       <%- include('partials/footer') %>
   </div>
