--- a/views/partials/FormButtons.ejs
+++ b/views/partials/FormButtons.ejs
@@ -7,7 +7,7 @@
         >Submit</button>
         <button 
             type = "button"
-            onClick = "history.back()"
+            onClick = "location.href='/'"
             class = "rounded-full p-[10px] active:translate-x-[5px] active:translate-y-[5px] cursor-pointer
             border-white border-2 text-center w-[150px] select-none text-black mx-auto
             hover:bg-gray-300 bg-[#dbdbdb]"
