--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <div 
-	class = "w-full h-[100px] bg-[#555150] absolute bottom-0 left-0 right-0"
+	id="footer"
+	class = "w-full h-[100px] bg-[#555150] absolute bottom-0 left-0 right-0
+	bg-black"
 >
 
 </div>
