--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -512,15 +512,19 @@ video {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 }
+.my-\[25px\] {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
 .my-\[50px\] {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-.mb-\[100px\] {
-  margin-bottom: 100px;
-}
 .mb-\[120px\] {
   margin-bottom: 120px;
+}
+.mb-\[135px\] {
+  margin-bottom: 135px;
 }
 .mb-\[50px\] {
   margin-bottom: 50px;
@@ -534,6 +538,9 @@ video {
 .h-\[100px\] {
   height: 100px;
 }
+.h-\[2px\] {
+  height: 2px;
+}
 .h-auto {
   height: auto;
 }
@@ -546,6 +553,9 @@ video {
 .w-\[100px\] {
   width: 100px;
 }
+.w-\[150px\] {
+  width: 150px;
+}
 .w-full {
   width: 100%;
 }
@@ -555,18 +565,40 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
 .flex-col {
   flex-direction: column;
 }
 .justify-between {
   justify-content: space-between;
 }
+.rounded-full {
+  border-radius: 9999px;
+}
 .rounded-md {
   border-radius: 0.375rem;
+}
+.border-2 {
+  border-width: 2px;
+}
+.border-\[2px\] {
+  border-width: 2px;
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-\[\#555150\] {
   --tw-bg-opacity: 1;
   background-color: rgb(85 81 80 / var(--tw-bg-opacity));
+}
+.bg-\[\#e48f1a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 143 26 / var(--tw-bg-opacity));
 }
 .bg-\[\#f2e798\] {
   --tw-bg-opacity: 1;
@@ -574,6 +606,9 @@ video {
 }
 .p-10 {
   padding: 2.5rem;
+}
+.p-\[10px\] {
+  padding: 10px;
 }
 .pb-\[6\.5rem\] {
   padding-bottom: 6.5rem;
@@ -583,9 +618,6 @@ video {
 }
 .font-\[\'DecoTech\'\] {
   font-family: 'DecoTech';
-}
-.font-\[Chapleau\] {
-  font-family: Chapleau;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -598,6 +630,10 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-bold {
   font-weight: 700;
@@ -669,6 +705,21 @@ video {
 .file\:text-white::file-selector-button {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:bg-\[\#d48518\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 133 24 / var(--tw-bg-opacity));
+}
+
+.active\:translate-x-\[5px\]:active {
+  --tw-translate-x: 5px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:translate-y-\[5px\]:active {
+  --tw-translate-y: 5px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 640px) {
