--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">  
-        <link rel ="stylesheet" href='/stylesheets/style.css'>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <title>Henry's Speakeasy</title>
-    </head>
-    <body>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Henry's Speakeasy</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel ="stylesheet" href='stylesheets/style.css'> 
+  <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
+</head>
+<body class = "bg-[#555150] h-auto">
+  <div 
+  id="container"
+  class = "w-full flex flex-col relative grow min-h-[120vh]">
+      <div 
+        id = "contentWrapper"
+        class = "pb-[6.5rem]">
+          <div class = "w-full mb-[135px]">
+            <%- include("partials/header") %>
+            <%- include("partials/MobileMenu") %>
+          </div>
+          <div class = "text-center text-white">
+            <h1 class = "text-5xl"><%= title %></h1>
+            <p class = "text-2xl"><%= error %></p>
+          </div>
+      </div>
+      <%- include('partials/footer') %>
+  </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+</body>
 </html>
