--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,14 +21,16 @@
           <div class = "text-center">
              <h1 class = "font-['DecoTech'] text-5xl text-black mt-[100px] uppercase"><%= title %></h1>
              <div class = "w-11/12 mx-auto sm:w-5/12 ">
-              <% if(typeof error != 'undefined' && typeof error.errors != 'undefined') {%> 
+              <% if(typeof error != 'undefined' && error.length > 0) {%> 
                   <div 
                     id="ErrorDiv"
                     class = "my-[50px] text-black w-full">
                     <h2 class = "font-bold">Error: </h2>
-                    <% error.errors.forEach(val => { %> 
-                        <p class = "text-white"><%= val.msg %></p>
-                    <% }) %>
+                    <ul>
+                    <% error.forEach(err => { %> 
+                        <li><%= err %></li>
+                    <%}) %> 
+                    </ul>
                   </div>
               <%}%>
               <div>
@@ -40,7 +42,6 @@
                   <form
                     action="/login" 
                     method="POST"
-                    enctype="multipart/form-data"
                     class="[&>div>label]:text-black [&>div>label]:uppercase [&>div>label]:font-bold [&>div]:grid [&>div>input]:rounded-lg 
                     [&>div]:w-full [&>div]:my-[10px] [&>div>input]:pl-3 [&>div>input]:bg-[rgba(0,0,0,0)] 
                     [&>div>input]:text-black [&>div>input]:border-white [&>div>input]:border-[1px]
