--- a/views/partials/mainPage/messageBoard.ejs
+++ b/views/partials/mainPage/messageBoard.ejs
@@ -15,11 +15,15 @@
 				onclick = "location.href='<%= mess.user.url%>'" 
 				class = "cursor-pointer"
 				id = "AvatarField">
+				<% var ProfilePicStyle = "w-[100px] h-[100px] m-auto rounded-full" %>
 				<% if(typeof mess.user.profile_pic != 'undefined' && typeof mess.user.profile_pic.data != 'undefined' && (user && (mess.user == user.id || user.member == true))) {%>
-					<img src="data:<%= mess.user.profile_pic.contentType %>;base64,<%= mess.user.profile_pic.data.toString('base64') %>"/>
+					<img 
+						src="data:<%= mess.user.profile_pic.contentType %>;base64,<%= mess.user.profile_pic.data.toString('base64') %>
+						class = "<%= ProfilePicStyle %>"
+						/>
 				<%} else {%>
 				  <img src="<%= avatar %>"
-					   class="w-[100px] h-[100px] m-auto rounded-full"
+					   class="<%= ProfilePicStyle %>"
 					   alt="avatar" />
 				<% } %>
 				</div>
