--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -857,3 +857,29 @@ video {
   width: 100%;
 }
 
+.Tag {
+    border-radius: 10px;
+    background-color: #dbdbdb;
+    color: #000;
+    padding: 0 10px;
+    white-space: nowrap;
+    margin: 4px auto;
+    min-width: fit-content;
+    display: flex;
+    grid-template-columns: 90% 10%;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+    .Tag > div {
+        margin: auto;
+        display: block;
+    }
+
+
+.MiniDeleteButton {
+    width: 15px;
+    height: 15px;
+    margin: auto 0;
+    display: block;
+}
